use coloraide implementations and refactor code

--- a/src/color_mixer/templates/index.html
+++ b/src/color_mixer/templates/index.html
@@ -90,9 +90,7 @@
             </div>
           </div>
           <div class="swatches-panel">
-            <div id="swatches">
-              <!-- Initial swatches injected by backend or JS -->
-            </div>
+            <div id="swatches"></div>
           </div>
         </div>
       </div>
