--- a/src/color_mixer/templates/index.html
+++ b/src/color_mixer/templates/index.html
@@ -153,9 +153,23 @@
                   >
                     Generate
                   </button>
+
+                  <!-- optional -->
+                  <button
+                    type="button"
+                    class="lab-copy"
+                    id="ghostty-copy"
+                    title="Copy all"
+                  >
+                    Copy
+                  </button>
                 </div>
 
-                <textarea id="ghostty-css" class="lab-box" readonly></textarea>
+                <div
+                  id="ghostty-css"
+                  class="lab-box lab-output"
+                  aria-label="Generated CSS variables"
+                ></div>
               </div>
             </section>
           </div>
