--- a/src/color_mixer/templates/index.html
+++ b/src/color_mixer/templates/index.html
@@ -189,7 +189,7 @@
                     </svg>
                   </button>
                   <div class="format-prefix-container" id="format-dropdown">
-                    <span class="algo-outer-cont">
+                    <span class="format-outer-cont">
                       <button
                         type="button"
                         class="format-trigger"
