gen extra colors from color palette algo

--- a/src/color_mixer/templates/index.html
+++ b/src/color_mixer/templates/index.html
@@ -87,7 +87,7 @@
                               class="algo-trigger"
                               id="algo-trigger"
                             >
-                              sRGB γ-encoded
+                              Oklab
                             </button>
                             <span class="arrow down"></span>
                           </span>
@@ -100,9 +100,9 @@
                           <input
                             type="number"
                             id="steps"
-                            value="21"
+                            value="27"
                             min="3"
-                            max="64"
+                            max="100"
                           />
                           <button
                             type="button"
